add grid search with cross validation

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e35a3472",
+   "id": "a127a448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
     "from sklearn.datasets import load_iris\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "683be0a7",
+   "id": "05c06548",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947c8467",
+   "id": "657655b4",
    "metadata": {},
    "source": [
     "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed60f66",
+   "id": "eeb3b8fa",
    "metadata": {},
    "source": [
     "## Literature Review"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96a183f",
+   "id": "71c92dd0",
    "metadata": {},
    "source": [
     "Placeholder for review of literature"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11858b2",
+   "id": "8b7fec93",
    "metadata": {},
    "source": [
     "## Supervised Learning"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47534a8f",
+   "id": "024f88ac",
    "metadata": {},
    "source": [
     "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d1761f",
+   "id": "8554311b",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a88a622c",
+   "id": "1264ebd7",
    "metadata": {
     "scrolled": false
    },
@@ -220,7 +220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_110556\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\dhiggins\\AppData\\Local\\Temp\\ipykernel_59440\\984429858.py:29: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlation_matrix = df.corr()\n"
      ]
     },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66cc5ac7",
+   "id": "3830c508",
    "metadata": {},
    "source": [
     "The initial analysis of the dataset show there are no missing values. It will not be necessary to preprocess the dataset using the dropna method to clean the data. These results also suggest that the setosa species is relatively easy to differentiate from the other two species, particularly when considering the petal lengths and widths. The sepal characteristics are less clear but the distribution plots indicate there may a statistically significant difference between setosa and the other two varieties. In each of the pair plots above, a line can be constructed on the plot that would isolate the setosa values from the other varieties completely. The versicolor and virginica show some separation but are intermingled to some degree on each plot. The separation seen between each species indicates that the K Nearest Neighbours classifier may be an appropriate algorithm to use here. We will carry out a t-test to gain more insight on this."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2397d11d",
+   "id": "0a802fa1",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ada84b4",
+   "id": "c1f0b8ba",
    "metadata": {},
    "source": [
     "## Classification Algorithms"
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f256e87",
+   "id": "5d238af8",
    "metadata": {},
    "source": [
     "Classification algorithms are fundamental in machine learning, serving to categorize data into predefined classes or categories. They are pivotal in numerous real-world applications, such as sentiment analysis, image recognition (e.g., the MNIST dataset), and medical diagnosis (e.g., the Breast Cancer Wisconsin dataset).\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b28955e3",
+   "id": "5c3e3576",
    "metadata": {},
    "source": [
     "## Synthetic dataset"
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "515cfc68",
+   "id": "4a785024",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f070373d",
+   "id": "72435715",
    "metadata": {},
    "source": [
     "## K Nearest Neighbours"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "06345aba",
+   "id": "2d45ab32",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47344d9d",
+   "id": "62c8df6a",
    "metadata": {},
    "source": [
     "The accuracy of the classifier created using the K Nearest Neighbour classifier is showing as 1 in the first run using a 70/30 train/test split. This is very encouraging but should be compared to runs using variations in the train/test split and k values"
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6e691c77",
+   "id": "cd76ff2c",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30f75c07",
+   "id": "fc0b5533",
    "metadata": {
     "scrolled": false
    },
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94fa67a8",
+   "id": "6181b23b",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f67610e",
+   "id": "5e521e75",
    "metadata": {},
    "source": [
     "## Optimum value of K"
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91983d22",
+   "id": "07a16781",
    "metadata": {},
    "source": [
     "Error Rate vs. K Value Plot:\n",
@@ -668,8 +668,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "45668891",
+   "execution_count": 10,
+   "id": "ec6d8ebe",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f25b5029",
+   "id": "aa5d513c",
    "metadata": {},
    "source": [
     "It is clear from the plot above that a $5 \\leq k \\leq 21$ will give the lowest error rate. By setting $k = 5$, we can optimise the $k$-value while also minimising the amount of computational resources required for each iteration of the algorithm."
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6636ee2",
+   "id": "e672c7e1",
    "metadata": {},
    "source": [
     "Grid Search with Cross-Validation:\n",
@@ -739,15 +739,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2bc04960",
+   "execution_count": 12,
+   "id": "1c4d4c3e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Random State: 42\n",
+      "\n",
+      "Train/Test Split: 0.3\n",
+      "Best parameters: {'n_neighbors': 7}\n",
+      "Best score: 0.9523809523809523\n",
+      "Test set accuracy: 1.0\n",
+      "\n",
+      "Train/Test Split: 0.5\n",
+      "Best parameters: {'n_neighbors': 8}\n",
+      "Best score: 0.9466666666666667\n",
+      "Test set accuracy: 0.9466666666666667\n",
+      "\n",
+      "Train/Test Split: 0.7\n",
+      "Best parameters: {'n_neighbors': 3}\n",
+      "Best score: 0.9777777777777779\n",
+      "Test set accuracy: 0.9714285714285714\n",
+      "\n",
+      "Random State: 43\n",
+      "\n",
+      "Train/Test Split: 0.3\n",
+      "Best parameters: {'n_neighbors': 9}\n",
+      "Best score: 0.9619047619047618\n",
+      "Test set accuracy: 0.9555555555555556\n",
+      "\n",
+      "Train/Test Split: 0.5\n",
+      "Best parameters: {'n_neighbors': 6}\n",
+      "Best score: 1.0\n",
+      "Test set accuracy: 0.9466666666666667\n",
+      "\n",
+      "Train/Test Split: 0.7\n",
+      "Best parameters: {'n_neighbors': 2}\n",
+      "Best score: 1.0\n",
+      "Test set accuracy: 0.9523809523809523\n",
+      "\n",
+      "Random State: 44\n",
+      "\n",
+      "Train/Test Split: 0.3\n",
+      "Best parameters: {'n_neighbors': 4}\n",
+      "Best score: 0.9428571428571428\n",
+      "Test set accuracy: 0.9555555555555556\n",
+      "\n",
+      "Train/Test Split: 0.5\n",
+      "Best parameters: {'n_neighbors': 4}\n",
+      "Best score: 0.96\n",
+      "Test set accuracy: 0.9333333333333333\n",
+      "\n",
+      "Train/Test Split: 0.7\n",
+      "Best parameters: {'n_neighbors': 5}\n",
+      "Best score: 0.9777777777777779\n",
+      "Test set accuracy: 0.9428571428571428\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define different train/test split values\n",
+    "split_values = [0.3, 0.5, 0.7]\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {'n_neighbors': np.arange(2, 26)}\n",
+    "\n",
+    "for seed in range(42, 45):  # Different random states for each split\n",
+    "    print(f\"\\nRandom State: {seed}\")\n",
+    "    for split_value in split_values:\n",
+    "        print(f\"\\nTrain/Test Split: {split_value}\")\n",
+    "\n",
+    "        # Split the dataset into a training set and a testing set\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=split_value, random_state=seed)\n",
+    "\n",
+    "        # Create a KNN classifier\n",
+    "        knn = KNeighborsClassifier()\n",
+    "\n",
+    "        # Instantiate the GridSearchCV object with 5-fold cross-validation\n",
+    "        grid_knn = GridSearchCV(knn, param_grid, cv=5)\n",
+    "\n",
+    "        # Fit the model\n",
+    "        grid_knn.fit(X_train, y_train)\n",
+    "\n",
+    "        # Print the best parameters and best score\n",
+    "        print(\"Best parameters:\", grid_knn.best_params_)\n",
+    "        print(\"Best score:\", grid_knn.best_score_)\n",
+    "\n",
+    "        # Optionally, evaluate on the test set\n",
+    "        best_knn = grid_knn.best_estimator_\n",
+    "        test_accuracy = best_knn.score(X_test, y_test)\n",
+    "        print(\"Test set accuracy:\", test_accuracy)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c2f2a2e",
+   "id": "68d2e107",
    "metadata": {},
    "source": [
     "## Support Vector Machines"
@@ -756,18 +846,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99055ca",
+   "id": "903f2e63",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0409706a",
+   "id": "9cc0e8ca",
    "metadata": {},
    "source": [
     "## References\n",
-    "- https://www.analyticsvidhya.com/blog/2018/03/introduction-k-neighbours-algorithm-clustering/ 8/12/2023"
+    "- https://www.analyticsvidhya.com/blog/2018/03/introduction-k-neighbours-algorithm-clustering/ 8/12/2023\n",
+    "- Leif E. Peterson (2009) K-nearest neighbor. Scholarpedia, 4(2):1883.\n",
+    "- "
    ]
   }
  ],
