add literature references

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a127a448",
+   "id": "cec50613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c06548",
+   "id": "39df657d",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657655b4",
+   "id": "5e4db8bf",
    "metadata": {},
    "source": [
     "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb3b8fa",
+   "id": "1c4e2bc8",
    "metadata": {},
    "source": [
     "## Literature Review"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c92dd0",
+   "id": "5e1da440",
    "metadata": {},
    "source": [
     "Placeholder for review of literature"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b7fec93",
+   "id": "34aa1fce",
    "metadata": {},
    "source": [
     "## Supervised Learning"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "024f88ac",
+   "id": "61db6c66",
    "metadata": {},
    "source": [
     "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8554311b",
+   "id": "c2dd1b53",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1264ebd7",
+   "id": "518c1851",
    "metadata": {
     "scrolled": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3830c508",
+   "id": "289a9a38",
    "metadata": {},
    "source": [
     "The initial analysis of the dataset show there are no missing values. It will not be necessary to preprocess the dataset using the dropna method to clean the data. These results also suggest that the setosa species is relatively easy to differentiate from the other two species, particularly when considering the petal lengths and widths. The sepal characteristics are less clear but the distribution plots indicate there may a statistically significant difference between setosa and the other two varieties. In each of the pair plots above, a line can be constructed on the plot that would isolate the setosa values from the other varieties completely. The versicolor and virginica show some separation but are intermingled to some degree on each plot. The separation seen between each species indicates that the K Nearest Neighbours classifier may be an appropriate algorithm to use here. We will carry out a t-test to gain more insight on this."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a802fa1",
+   "id": "71dd5a54",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f0b8ba",
+   "id": "8ceb415e",
    "metadata": {},
    "source": [
     "## Classification Algorithms"
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d238af8",
+   "id": "473dff53",
    "metadata": {},
    "source": [
     "Classification algorithms are fundamental in machine learning, serving to categorize data into predefined classes or categories. They are pivotal in numerous real-world applications, such as sentiment analysis, image recognition (e.g., the MNIST dataset), and medical diagnosis (e.g., the Breast Cancer Wisconsin dataset).\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3e3576",
+   "id": "e5cd7b44",
    "metadata": {},
    "source": [
     "## Synthetic dataset"
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a785024",
+   "id": "b2c00a36",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72435715",
+   "id": "be841ad1",
    "metadata": {},
    "source": [
     "## K Nearest Neighbours"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2d45ab32",
+   "id": "99b9c7ec",
    "metadata": {},
    "outputs": [
     {
@@ -500,16 +500,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c8df6a",
+   "id": "0e1ef8ee",
    "metadata": {},
    "source": [
-    "The accuracy of the classifier created using the K Nearest Neighbour classifier is showing as 1 in the first run using a 70/30 train/test split. This is very encouraging but should be compared to runs using variations in the train/test split and k values"
+    "The accuracy of the classifier created using the K Nearest Neighbour algorithim in the first run is very encouraging but should be compared to runs using variations in the train/test split and k values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cd76ff2c",
+   "id": "adcdb8b9",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fc0b5533",
+   "id": "770249d1",
    "metadata": {
     "scrolled": false
    },
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6181b23b",
+   "id": "16073be1",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e521e75",
+   "id": "c46d2941",
    "metadata": {},
    "source": [
     "## Optimum value of K"
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a16781",
+   "id": "21bb5ac7",
    "metadata": {},
    "source": [
     "Error Rate vs. K Value Plot:\n",
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ec6d8ebe",
+   "id": "e7cb4f78",
    "metadata": {},
    "outputs": [
     {
@@ -721,15 +721,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5d513c",
+   "id": "a24cd32a",
    "metadata": {},
    "source": [
-    "It is clear from the plot above that a $5 \\leq k \\leq 21$ will give the lowest error rate. By setting $k = 5$, we can optimise the $k$-value while also minimising the amount of computational resources required for each iteration of the algorithm."
+    "It is clear from the plot above that a $k=8$ with a train/test split = 0.5 will give the lowest error rate. These rates are however dependent on the random state seed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e672c7e1",
+   "id": "b6f0148c",
    "metadata": {},
    "source": [
     "Grid Search with Cross-Validation:\n",
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1c4d4c3e",
+   "id": "5aebbec8",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68d2e107",
+   "id": "cb32e712",
    "metadata": {},
    "source": [
     "## Support Vector Machines"
@@ -846,21 +846,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903f2e63",
+   "id": "89a62045",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9cc0e8ca",
+   "id": "941064f4",
    "metadata": {},
    "source": [
     "## References\n",
     "- https://www.analyticsvidhya.com/blog/2018/03/introduction-k-neighbours-algorithm-clustering/ 8/12/2023\n",
     "- Leif E. Peterson (2009) K-nearest neighbor. Scholarpedia, 4(2):1883.\n",
-    "- "
+    "- Pádraig Cunningham and Sarah Jane Delany. 2021. k-Nearest Neighbour Classifiers - A Tutorial.ACM Comput.\n",
+    "Surv. 54, 6, Article 128 (July 2021), 25 pages.\n",
+    "- F. Shi, H. Cao, X. Zhang and X. Chen, \"A Reinforced k-Nearest Neighbors Method With Application to Chatter Identification in High-Speed Milling,\" in IEEE Transactions on Industrial Electronics, vol. 67, no. 12, pp. 10844-10855, Dec. 2020, doi: 10.1109/TIE.2019.2962465."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1111319",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
