add literature review text

--- a/project.ipynb
+++ b/project.ipynb
@@ -69,7 +69,17 @@
    "id": "5e1da440",
    "metadata": {},
    "source": [
-    "Placeholder for review of literature"
+    "The k-Nearest Neighbors (KNN) algorithm is a fundamental method in machine learning, renowned for its simplicity and effectiveness in classification and regression tasks. This literature review synthesizes insights from key sources to explore the application of the KNN algorithm to the Iris dataset, a classic in the field of machine learning for pattern recognition.\n",
+    "\n",
+    "An article from Analytics Vidhya provides an in-depth introduction to the KNN algorithm, particularly emphasizing its implementation for clustering. The article breaks down the algorithm into clear, actionable steps, starting from loading the data to predicting the class of new data points. It explains the critical role of the distance metric, primarily focusing on the Euclidean distance, and highlights the importance of sorting these distances to identify the nearest neighbors. Additionally, the article touches upon various other distance metrics like Manhattan, Minkowski, and Hamming, which can be applied depending on the nature of the data【6†source】【7†source】.\n",
+    "\n",
+    "The article extends its discussion to the practical application of KNN on the Iris dataset, offering code examples in Python and R. The implementation demonstrates how the algorithm classifies the Iris species based on features like sepal length and width, petal length and width. In illustrating these implementations, the article provides a hands-on guide for beginners and intermediate learners in machine learning, showcasing how the KNN algorithm operates with real-world data. Notably, the article validates its model by comparing its predictions with those of established libraries like scikit-learn in Python and the “Class” library in R, finding consistent results in predicting the class ‘Iris-virginica’【6†source】.\n",
+    "\n",
+    "One significant insight from the Analytics Vidhya article is the impact of the choice of 'K', the number of nearest neighbors, on the algorithm's performance. The article illustrates this through an error curve analysis, demonstrating how varying 'K' values can influence the accuracy of predictions. This aspect underlines the necessity of choosing an optimal 'K' value, which is critical to balancing bias and variance in the model. Additionally, the article briefly touches upon the limitations of KNN, such as its sensitivity to outliers, inefficiency with large datasets, and challenges in high-dimensional spaces【7†source】【8†source】.\n",
+    "\n",
+    "The article also sheds light on the broader implications and applications of KNN. Beyond its use in species classification, KNN finds applications in diverse areas such as disease prediction, handwriting recognition, and image classification. This versatility stems from its straightforward yet robust approach to classification, making it a versatile tool in the machine learning arsenal. Furthermore, the article contrasts KNN with other machine learning methodologies, such as Artificial Neural Networks (ANNs), pointing out that while ANNs are suited for complex function approximation and pattern recognition, KNN is more accessible and less computationally intensive, albeit limited in handling complex data structures【6†source】.\n",
+    "\n",
+    "In conclusion, the articles from Analytics Vidhya comprehensively cover the theoretical and practical aspects of the KNN algorithm, particularly in its application to the Iris dataset. They offer valuable insights into the workings, implementation, and limitations of KNN, making them an essential resource for researchers and practitioners aiming to leverage this algorithm in machine learning projects."
    ]
   },
   {
@@ -865,12 +875,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1111319",
+   "cell_type": "markdown",
+   "id": "75204336",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----\n",
+    "## End"
+   ]
   }
  ],
  "metadata": {
